--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,18 @@
+<% provide(:title, "Home") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <h1><%= current_user.name %></h1>
+        <p><%= current_user.email %></p>
+        <span><%= link_to "view my profile", current_user %></span>
+      </section>
+      <section class="micropost_form">
+        <%= render 'microposts/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
 
@@ -9,3 +24,4 @@
 	</p>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+<% end %>
